# classificacao-img-radiologia

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 309c410ebe61_new_tables_for_image_and_classification.py  369ce8eefb0d_add_dtcriado_column_to_user_and_now_.py  462e93efe488_add_usuario_column.py  53f2d73495d4_add_administrador_column_to_user.py  6362e9607723_setup.py  7effac5fcb30_add_email_to_user_model.py
classificacao_img_radiologia/: db.py  main.py  runner.py
classificacao_img_radiologia/apps/classificacao/: Classificacao.py  ListagemClassificacao.py
classificacao_img_radiologia/apps/usuario/: Registro.py
classificacao_img_radiologia/models/: __init__.py
classificacao_img_radiologia/models/classificacao/: Classificacao.py  Imagem.py
classificacao_img_radiologia/models/usuario/: Usuario.py
classificacao_img_radiologia/pages/: list_classificacao.py  register_classifcacao.py  register_user.py
classificacao_img_radiologia/partials/: BasePage.py  Bottom.py
classificacao_img_radiologia/services/: CookieManager.py
classificacao_img_radiologia/services/classificacao/: Classificacao.py
classificacao_img_radiologia/services/usuario/: Usuario.py
classificacao_img_radiologia/utils/: get_base_folder.py
