[tool.poetry]
name = "classificacao-img-radiologia"
version = "0.1.0"
description = ""
authors = ["Pedro Cunha <dev@citsec.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.44.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
mysqlclient = "^2.2.7"
extra-streamlit-components = "^0.1.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamlit = "classificacao_img_radiologia.runner:main"

